# rust_wasm_template

./: Cargo.toml  README.md
src/: lib.rs
www/: index.html
