[package]
name = "first-wasm"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib"]

[dependencies]
wasm-bindgen = "^0.2"

# feature list can be found at
# https://github.com/rustwasm/wasm-bindgen/blob/master/crates/web-sys/Cargo.toml
web-sys = {version = "^0.3",features = [
  'Document',  
  'HtmlElement',
  'Window',
]}




